fixed neighborhood home section css and added overflow-x hidden for html

--- a/src/components/Home/NeighborhoodHomeSection.css
+++ b/src/components/Home/NeighborhoodHomeSection.css
@@ -1,5 +1,5 @@
 #neighborhood {
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .neighborhood-home-section {
