--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 body {
